# club-back-end

./: .dockerignore  .editorconfig  .env  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  rustfmt.toml  travis.yml
auth/src/: jwt.rs
docs/: DESIGN.md  database-schema.xml  extra-docker-info.md  optimized-docker-info.md  optimized.Dockerfile
migrations/2018-12-19-163802_create_students_and_events/: down.sql  up.sql
migrations/2019-01-29-023616_add_officers_contributors_projects_pluralise_old_names/: down.sql  up.sql
src/: attendance.rs  auth.rs  banned_set.rs  database.rs  event.rs  jwt.rs  main.rs  member.rs  officer.rs  password.rs  project.rs  schema.rs  secret.rs
