[package]
name = "club-back-end"
version = "0.1.0"
authors = ["Hunter Jarrell <hjarrell555@gmail.com>", "Matthew Booe"]

[dependencies]
rocket = "0.4.0"
diesel = { version = "1.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.3"
chrono = "0.4"
frank_jwt = "3.1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_postgres_pool"]
