[package]
name = "club-back-end"
version = "0.1.0"
authors = ["Hunter Jarrell <hjarrell555@gmail.com>", "Matthew Booe"]

[dependencies]
rocket = "0.4.0"
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
diesel_migrations = "1.3"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_postgres_pool"]
